--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.13.0"
   },
