Changing project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_boilerplate_nodejs",
+  "name": "boilerplate-nodejs-api",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
