--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.13.0",
-    "supertest": "^4.0.2"
+    "sequelize": "^5.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
