--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@babel/node": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
@@ -29,7 +30,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-upgrade": "^1.0.1",
@@ -42,12 +42,11 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.13.0"
+    "sequelize": "^5.13.0",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
-    "@babel/node": "^7.0.0",
     "eslint": "^5.16.0",
-    "nodemon": "^1.18.10",
-    "sequelize-cli": "^5.5.0"
+    "nodemon": "^1.18.10"
   }
 }
