--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-upgrade": "^1.0.1",
-    "bcrypt": "^3.0.8",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -41,6 +41,7 @@
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "node-pre-gyp": "^0.16.0",
     "pg": "^7.12.1",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
