chore: adding the try/catch pattern in the initial model test, and updating the test script to show the unfinished async requests

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "start": "babel-node index.js",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon --exec babel-node index.js"
   },
   "author": "Fernando Calixto de Oliveira",
